###############################################################################
## NEWS to package MKclass
###############################################################################

###########################################################
## Version 0.1
###########################################################
- Start of development