@@ -1,0 +1,39 @@
+\name{MKclass-package}
+\alias{MKclass-package}
+\alias{MKclass}
+\docType{package}
+\title{
+Functions for Statistical Classification.
+}
+\description{
+Contains several functions for statistical classification.
+}
+\details{
+\tabular{ll}{
+Package: \tab MKclass\cr
+Type: \tab Package\cr
+Version: \tab 0.1\cr
+Date: \tab 2019-08-16\cr
+Depends: \tab R(>= 3.5.0)\cr
+Imports: \tab stats, utils, graphics, grDevices, RColorBrewer, robustbase, ggplot2, scales, limma\cr
+Suggests: \tab gplots, Amelia, knitr, rmarkdown, exactRankTests, foreach, parallel, doParallel\cr
+License: \tab LGPL-3\cr
+URL: \tab http://www.stamats.de/\cr
+}
+library(MKclass)
+}
+\author{ Matthias Kohl \url{http://www.stamats.de}
+
+Maintainer: Matthias Kohl  \email{matthias.kohl@stamats.de}}
+%\references{
+%~~ Literature or other references for background information ~~
+%}
+%~~ Optionally other keywords from doc/KEYWORDS, one per line
+%\seealso{
+%~~ Optional links to other man pages, e.g. ~~
+%~~ \code{\link[<pkg>:<pkg>-package]{<pkg>}} ~~
+%}
+%\examples{
+%~~ simple examples of the most important functions ~~
+%}
+\keyword{package}
